# lob_data_engine

./: README.md  inspect_parquet.py  makefile  pyproject.toml  vps_config.json
docs/: binance_listeners.md  jobs_usage.md
lob_data_engine/: schemas.py
lob_data_engine/binance_listener/: config.py  orderbook.py  writer.py
lob_data_engine/binance_perp_listener/: __init__.py  orderbook.py
lob_data_engine/hyperliquid_listener/utils/: writer.py
lob_data_engine/jobs/: fill_gap.py  fill_trade_gap.py
lob_data_engine/process/: reconstruct_lob.py  test_process.py
lob_data_engine/process/calculate_factor/: lob_factors.py  registry.py  trade_factors.py
lob_data_engine/process/lob/: binance.py
lob_data_engine/process/traders/: binance.py
modeling/: README.md  config.py  main.py  run_etl.py  train_hmm.py  train_model.py  visualize_results.py
modeling/src/: etl.py  features.py  hmm.py  hmm_eval.py  labeling.py  processing.py  training.py  utils.py  visualization.py
scripts/: start_binance.py  start_binance_perp.py  start_listeners.py
src/: raw_data_schemas.py  start_binance.py  start_binance_perp.py  start_listeners.py  ws_manager.py
src/binance_listener/: main.py  orderbook.py  writer.py
src/hyperliquid/: websocket_manager.py
src/hyperliquid_listener/: __init__.py  config.py  main.py  websocket_manager.py
src/hyperliquid_listener/utils/: writer.py
src/jobs/: config.py  fill_gap.py  fill_trade_gap.py  merge_parquet.py
src/process/: process_lob.py  process_trades.py  sample_by_dollar_bar.py  sample_by_time.py
utils/: dataset_processor.py
(+29 files in other folders)
